--- a/public/css/todo_site.css
+++ b/public/css/todo_site.css
@@ -5,8 +5,8 @@ in a directory named "css" in the web root
 
 .center {
 	text-align: center;
-	font-size: 20px;
-	font-size: 40px;
+	font-size: 30px;
+	font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 body {
