--- a/public/css/resume_site.css
+++ b/public/css/resume_site.css
@@ -2,8 +2,15 @@
 this content is stored in a file named "site.css" 
 in a directory named "css" in the web root 
 */
-
-.fancy-header {
-    color: blue;
-    text-decoration: underline;
+.whiteletters{
+	color: #FFF;
 }
+
+#fancy{
+    color: #FFF;
+}
+
+#codeup{
+	color: #0F0;
+}
+
