--- a/public/css/resume_site.css
+++ b/public/css/resume_site.css
@@ -2,9 +2,8 @@
 this content is stored in a file named "css/resume_site.css" 
 in a directory named "css" in the web root 
 */
-body{ 
-	padding-top: 70px;
-	padding-bottom: 70px; 
+.padding{ 
+	padding-top: 40px;
 }
 
 .whiteletters{
