--- a/public/css/portfolio_site.css
+++ b/public/css/portfolio_site.css
@@ -2,6 +2,15 @@
 this content is stored in a file named "site.css" 
 in a directory named "css" in the web root 
 */
+.centerButton {
+	text-align: center;
+}
+
+.autoMargin {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .whiteletters{
 	color: #FFF;
 }
