--- a/public/css/resume_site.css
+++ b/public/css/resume_site.css
@@ -2,6 +2,16 @@
 this content is stored in a file named "css/resume_site.css" 
 in a directory named "css" in the web root 
 */
+.oxygen{
+	font-family: 'Oxygen', sans-serif;
+}
+
+.arizona {
+	font-family: 'Arizonia', cursive;
+	font-size: 45px;
+	padding-top: 20px;
+}
+
 .padding{ 
 	padding-top: 40px;
 }
@@ -10,12 +20,16 @@ in a directory named "css" in the web root
 	color: #FFF;
 }
 
-
-#fancy{
-    color: #FFF;
+#bottommargin{
+	margin-bottom: 0px;
 }
 
 #codeup{
 	color: #0F0;
 }
+
+#fancy{
+    color: #FFF;
+}
+
 
