--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -2,19 +2,31 @@
 this content is stored in a file named "whack.css" 
 in a directory named "css" in the web root 
 */
-.box {
-	height: 50px;
+.mole-hole {
+	height: 150px;
 	width: 150px;
-	margin-top: 10px;
-	border: solid 1px #000;
-	padding: 10px;
-	background-color: #F00;
+	border: solid 3px #000;
+	background-color: #FFF;
+	float: left;
 }
 
 .clickable {
-	cursor: crosshair;
+	cursor: pointer;
 }
 
-.container {
+.gameboard {
+	margin: auto;
+	width: 468px;
+}
 
+img {
+	height: 150px;
+	width: 150px;
+	display: none;
+}
+
+h1 {
+	color: #F00;
+	text-align: center;
+	font-size: 60px;
 }
