--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -62,10 +62,14 @@ h2 {
 	width: 468px;
 	text-align: center;
 	display: none;
+	color: #F00;
+	font-weight: bold;
 }
 
 h3 {
-	height: 15px;
+	color: #000;
+	text-shadow: 10px 2px 10px #FFF;
+	height: 18px;
 	width: 100px;
 	float: left;
 	margin-top: 2px;
@@ -84,4 +88,5 @@ body {
 	background-image: url('../img/desertRest.jpeg');
 	background-size:1000px 1000px;
 	background-repeat:  no-repeat;
+	opacity: .8;
 }
