--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -16,14 +16,11 @@ in a directory named "css" in the web root
 	width: 800px;
 }
 
-.clickable {
-	cursor: pointer;
-}
-
 .gameboard {
 	margin: auto;
 	width: 468px;
 	position: relative;
+	cursor: url('../img/hammer.png'), auto;
 }
 
 .scorebox {
@@ -45,6 +42,11 @@ in a directory named "css" in the web root
 	width: 180px;
 }
 
+#shade {
+	background-color: #000;
+	
+}
+
 img {
 	height: 150px;
 	width: 150px;
@@ -56,22 +58,26 @@ h1 {
 	text-align: center;
 	font-size: 60px;
 	margin-bottom: 10px;
+	font-family: sans-serif;
 }
 
 h2 {
-	width: 468px;
 	text-align: center;
+	font-size: 60px;
+	margin-bottom: 10px;
 	display: none;
 	color: #F00;
-	font-weight: bold;
+	font-family: sans-serif;
+	
 }
 
 h3 {
 	color: #000;
 	text-shadow: 10px 2px 10px #FFF;
 	height: 18px;
-	width: 100px;
+	width: 150px;
 	float: left;
+	font-size: 30px;
 	margin-top: 2px;
 	text-align: left;
 }
@@ -81,12 +87,11 @@ button {
 	margin-top: 20px;
 	background-color: #F00;
 	font-size: 14px;
-
 }
 
 body {
-	background-image: url('../img/desertRest.jpeg');
+	background-image: url('../img/GuacamoleBackground.jpg');
 	background-size:1000px 1000px;
 	background-repeat:  no-repeat;
-	opacity: .8;
+	opacity: .9;
 }
