--- a/public/css/whack.css
+++ b/public/css/whack.css
@@ -91,8 +91,8 @@ button {
 }
 
 body {
-	background-image: url('../img/#.jpg');
-	background-size:1000px 1000px;
+	background-image: url('../img/GuacamoleBackground.jpg');
+	background-size:1200px 950px;
 	background-repeat:  no-repeat;
 	opacity: .9;
 }
